NetBSD Problem Report #48251

From t-hash@abox3.so-net.ne.jp  Sat Sep 28 19:13:58 2013
Return-Path: <t-hash@abox3.so-net.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6B4CF7250A
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 28 Sep 2013 19:13:58 +0000 (UTC)
Message-Id: <201309281913.r8SJDqHK028448@ms-omx11.plus.so-net.ne.jp>
Date: Sun, 29 Sep 2013 04:13:52 +0900
From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
To: gnats-bugs@gnats.NetBSD.org
Subject: usmsc cannot change link address

>Number:         48251
>Category:       kern
>Synopsis:       usmsc cannot change link address
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Sep 28 19:15:00 +0000 2013
>Closed-Date:    Sun Sep 29 09:24:43 +0000 2013
>Last-Modified:  Sun Sep 29 09:25:01 +0000 2013
>Originator:     Takahiro HAYASHI
>Release:        NetBSD 6.99.23
>Organization:
>Environment:
System: NetBSD rpi 6.99.23 NetBSD 6.99.23 (MYRPI) #11: Sun Sep 29 03:34:12 JST 2013  root@halt:/usr/build2/obj.evbarm/sys/arch/evbarm/compile/MYRPI evbarm
Architecture: arm
Machine: evbarm
>Description:
	usmsc(4) cannot change it's link address
	because the driver does not update sc with new link address in ifp
	when it's link address has been changed.

>How-To-Repeat:
	assign another link address on usmsc, ifconfig usmsc down up, and
	ping other host.

>Fix:
	Please memcpy CLLADDR(ifp->if_sadl) to sc->sc_enaddr before
	calling smsc_setmacaddress().

--
t-hash

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48251 CVS commit: src/sys/dev/usb
Date: Sun, 29 Sep 2013 07:25:54 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sun Sep 29 07:25:53 UTC 2013

 Modified Files:
 	src/sys/dev/usb: if_smsc.c

 Log Message:
 PR/48251: usmsc cannot change link address

 Use CLLADDR appropriately.


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/sys/dev/usb/if_smsc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 29 Sep 2013 07:33:09 +0000
State-Changed-Why:
OK to close? Thanks, Nick


State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 29 Sep 2013 09:24:43 +0000
State-Changed-Why:
Confirmed fixed.


From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: skrll@NetBSD.org, kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org,
        gnats-admin@netbsd.org
Subject: Re: kern/48251 (usmsc cannot change link address)
Date: Sun, 29 Sep 2013 18:23:43 +0900

 On Sun, 29 Sep 2013 07:33:09 +0000 (UTC)
 skrll@NetBSD.org wrote:

 > Synopsis: usmsc cannot change link address
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: skrll@NetBSD.org
 > State-Changed-When: Sun, 29 Sep 2013 07:33:09 +0000
 > State-Changed-Why:
 > OK to close? Thanks, Nick

 Yes, the fix works fine.
 Thank you for your quick response.

 --
 t-hash

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.