PR/48251: usmsc cannot change link address

Use CLLADDR appropriately.